--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "authentication server",
   "main": "index.js",
   "scripts": {
-    "test": "nodemon index.js"
+    "test": "env-cmd -f .env nodemon index.js",
+    "dev": "env-cmd -f .env.dev node index.js",
+    "start": "env-cmd -f .env node index.js"
   },
   "repository": {
     "type": "git",
@@ -20,10 +22,14 @@
     "aws-sdk": "^2.1281.0",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
+    "env-cmd": "^10.1.0",
     "express": "^4.18.2",
     "joi": "^17.7.0",
     "jsonwebtoken": "^9.0.0",
+    "mongodb": "^5.0.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
+    "path": "^0.12.7",
     "sequential-uuid": "^1.0.0"
   }
 }
